[package]
name = "blazing_rust_actix"
version = "0.1.0"
authors = ["Galudisu <galudisu@gmail.com>"]
edition = "2018"

license = "MIT/Apache-2.0"
readme = "README.MD"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
actix-web = "4.2.1"

bytes = "1.2.1"
futures = "0.3.25"
env_logger = "*"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"