[package]
name = "blazing_rust_piston"
version = "0.1.0"
authors = ["Galudisu <galudisu@gmail.com>"]
edition = "2018"

license = "MIT/Apache-2.0"
readme = "README.MD"

[dependencies]
piston = "0.42.0"
piston_window = "0.89.0"
piston2d-opengl_graphics = "0.59.0"
piston2d-graphics = "0.30.0"
pistoncore-glutin_window = "0.54.0"
rand="0.6.5"
