[package]
name = "blazing_rust_piston"
version = "0.1.0"
authors = ["Galudisu <galudisu@gmail.com>"]
edition = "2018"

license = "MIT/Apache-2.0"
readme = "README.MD"

[dependencies]
piston = "0.53.2"
piston_window = "0.126.0"
piston2d-opengl_graphics = "0.81.0"
piston2d-graphics = "0.42.0"
pistoncore-glutin_window = "0.70.1"
rand= "0.8.5"
